# metal-rendering-engine

./: .gitignore  Cargo.toml  README  README.md  build.rs
assets/environments/venice_sunset/: back.hdr  bottom.hdr  front.hdr  left.hdr  right.hdr  top.hdr
assets/shaders/: brdf.metal  environment_map.metal  pbr.metal
resources/: cottage1.mtl  cottage2.mtl
shader_types/: shader_types.h  wrapper.h
shaders/: pbr.metal  shaders.metal
src/: asset_loader.rs  camera.rs  lib.rs  lighting.rs  main.rs  model.rs  node.rs  renderer.rs  scene.rs  shaders.air  shaders.metal  shaders.metallib  skybox.rs  texturable.rs
