[package]
name = "metal-rendering-engine"
authors = ["Gan Jun Kai"]
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.1"

[dependencies]
cocoa = "0.24.0"
core-foundation = "0.9.2"
core-graphics-types = "0.1.1"
metal = "0.23.1"
winit = "0.25.0"
