[package]
name = "metal-gltf-viewer"
authors = ["Gan Jun Kai"]
version = "0.0.1"
edition = "2021"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59.1"

[dependencies]
cocoa = "0.24.0"
core-foundation = "0.9.2"
core-graphics-types = "0.1.1"
glam = "0.20.1"
gltf = { version = "0.16.0", features = ["names"] }
image = "0.23.14"
metal = "0.23.1"
obj-rs = "0.7.0"
objc = "0.2.7"
winit = "0.25.0"
